[tool.poetry]
name = "aiboss-agent-sdk"
version = "0.1.0"
description = "Python SDK for AI Boss Agent Platform"
authors = ["AI Boss Team"]
readme = "README.md"
packages = [{include = "aiboss"}]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.31.0"
typer = {extras = ["all"], version = "^0.9.0"}
rich = "^13.7.0"
python-dotenv = "^1.0.0"

[tool.poetry.scripts]
aiboss = "aiboss.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
